[MOD] Löschfunktion implementiert und Datumsformatierung korrigiert

--- a/src/app/todo-edit/todo-edit.component.html
+++ b/src/app/todo-edit/todo-edit.component.html
@@ -34,7 +34,7 @@
         </div>
         <div class="col-md-4">
             <label for="complete_till_ts">Bis wann:</label>
-            <input type="text" class="form-control" id="complete_till_ts" [(ngModel)]="todo.complete_till_ts">
+            <input type="date" class="form-control" id="complete_till_ts" [(ngModel)]="todo.complete_till_ts">
         </div>
     </div>
 
