--- a/src/app/todo-edit/todo-edit.component.html
+++ b/src/app/todo-edit/todo-edit.component.html
@@ -1,30 +1,36 @@
 <div class="container">
 
     <div class="row">
-        <h1>
-            <span *ngIf="todo && todo.id > 0"><i class="fas fa-edit"></i> Aufgabe #{{todo.id}}
-                bearbeiten</span>
-            <span *ngIf="todo && !(todo.id > 0)"><i class="fas fa-plus"></i> Neue Aufgabe anlegen</span>
-        </h1>
+        <div class="col-12">
+            <h1>
+                <span *ngIf="todo && todo.id > 0"><i class="fas fa-edit"></i> Aufgabe #{{todo.id}}
+                    bearbeiten</span>
+                <span *ngIf="todo && !(todo.id > 0)"><i class="fas fa-plus"></i> Neue Aufgabe anlegen</span>
+            </h1>
+        </div>
     </div>
 
     <div class="row">
-        <label for="title">Titel</label>
-        <input type="text" class="form-control" id="title" placeholder="Todo" [(ngModel)]="todo.title">
+        <div class="col-12">
+            <label for="title">Titel:</label>
+            <input type="text" class="form-control" id="title" placeholder="Todo" [(ngModel)]="todo.title">
+        </div>
     </div>
 
     <div class="row">
-        <label for="description">Beschreibung:</label>
-        <textarea class="form-control" id="description" placeholder="Beschreibung"
-                  [(ngModel)]="todo.description"></textarea>
+        <div class="col-12">
+            <label for="description">Beschreibung:</label>
+            <textarea class="form-control" id="description" placeholder="Beschreibung"
+                      [(ngModel)]="todo.description"></textarea>
+        </div>
     </div>
 
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-12 col-lg-4">
             <label for="owner">Bearbeiter:</label>
             <input type="text" class="form-control" id="owner" [(ngModel)]="todo.owner">
         </div>
-        <div class="col-md-4">
+        <div class="col-12 col-lg-4">
             <label for="priority">Priorität</label>
             <select class="custom-select d-block w-100" id="priority" [(ngModel)]="todo.priority">
                 <option value="1">Hoch</option>
@@ -32,22 +38,32 @@
                 <option value="-1">Niedrig</option>
             </select>
         </div>
-        <div class="col-md-4">
+        <div class="col-12 col-lg-4">
             <label for="complete_till_ts">Bis wann:</label>
             <input type="date" class="form-control" id="complete_till_ts" [(ngModel)]="todo.complete_till_ts">
         </div>
     </div>
 
-    <div class="row custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="done" [(ngModel)]="todo.done">
-        <label class="custom-control-label" for="done">Erledigt?</label>
+    <div class="row">
+        <div class="col-12">
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="done" [(ngModel)]="todo.done">
+                <label class="custom-control-label" for="done">Erledigt?</label>
+            </div>
+        </div>
     </div>
 
-    <hr class="row">
+    <div class="row">
+        <div class="col-12">
+            <hr>
+        </div>
+    </div>
 
     <div class="row">
-        <button class="btn btn-success btn-lg" (click)="save()">Speichern</button>&nbsp;
-        <button class="btn btn-secondary btn-lg" (click)="cancel()">Abbrechen</button>&nbsp;
-        <button class="btn btn-danger btn-lg" *ngIf="todo.id > 0" (click)="delete()">Löschen</button>
+        <div class="col-12">
+            <button class="btn btn-success btn-lg" (click)="save()">Speichern</button>&nbsp;
+            <button class="btn btn-secondary btn-lg" (click)="cancel()">Abbrechen</button>&nbsp;
+            <button class="btn btn-danger btn-lg" *ngIf="todo.id > 0" (click)="delete()">Löschen</button>
+        </div>
     </div>
 </div>
