--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -9,6 +9,18 @@
         </a>
     </h1>
 
+    <div class="well">
+        <label for="searchterm">Suche:</label>
+        <div class="input-group">
+            <input type="text" class="form-control" id="searchterm" [(ngModel)]="searchterm" (change)="getRecords()">
+            <div class="input-group-append">
+                <button class="btn btn-second btn-small input-group-text" title="Suchen" (click)="getRecords()"><i class="fas fa-search"></i></button>
+            </div>
+        </div>
+    </div>
+
+    <br><br>
+
     <div class="table-responsive">
         <table class="table table-striped table-sm">
             <thead>
